--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Howdy!</title>
-  </head>
-  <body>
-    <h1>What's up</h1>
-  </body>
+	<head>
+		<link rel="stylesheet" href="./mainstyle.css">
+        <title>OMHS CSC</title>
+	</head>
+	<!--The head will have an image, most likely a banner-->
+	<body>
+        <a href="index.html">
+            <div id="headbanner" style="background-image:url('./Pictures/OMCSBanner.png')"></div>
+        </a>
+        <!--This is the head image, clicking it will take you to the main page?-->
+        <!--List of options; current options include "Home" "About" "Members" "Contact"-->
+        <ul class="horiznav">
+            <a href="index.html"><li class="horiznav" id="current">Home</li></a>
+            <a href="about.html"><li class="horiznav">About</li></a>
+            <a href="posts.html"><li class="horiznav">Posts</li></a>
+            <a href="members.html"><li class="horiznav">Members</li></a>
+            <a href="contact.html"><li class="horiznav">Contact</li></a>
+        </ul>
+        <!--End Header section-->
+        <!--Begin body-->
+        <hr/>
+        <div id="main">
+            <h2>Oakland Mills High School Computer Science (Club) (OMCS / OMCSC)</h2><br/>
+            <p>The OMCSC is a club where people can work together towards a comman goal using computer science. This year
+            that goal is a game! This website provides information on the club, its members, and what's happening.</p>
+        </div>
+	</body>
+    <footer>
+        The Oakland Mills High School Computer Science Club was created in the 2016-2017 school year.
+    </footer>
 </html>
