Added all members

--- a/members.html
+++ b/members.html
@@ -25,10 +25,42 @@
             <table class="memberlist">
                 <tr>
                     <td>
-                        <strong>Position</strong>
+                        Member
                     </td>
                     <td>
-                        <strong>Name</strong>
+                        Kaleo Ngo
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        (Forced) Co-Founder
+                    </td>
+                    <td>
+                        Jonah Freeman
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Member
+                    </td>
+                    <td>
+                        Kyle Sluss
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Member
+                    </td>
+                    <td>
+                        Morgan Vanderhei
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Member
+                    </td>
+                    <td>
+                        Philip Tian
                     </td>
                 </tr>
                 <tr>
@@ -41,12 +73,38 @@
                 </tr>
                 <tr>
                     <td>
-                        Forced Co-Founder
+                        Member
                     </td>
                     <td>
-                        Jonah Freeman
+                        Jacob Kopp
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        Member
+                    </td>
+                    <td>
+                        Joni Kim
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Member
+                    </td>
+                    <td>
+                        Oluwole Odeseye
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Member
+                    </td>
+                    <td>
+                        Gabriel Pillay
+                    </td>
+                </tr>
+
+
             </table>
             
         </div>
