--- a/about.html
+++ b/about.html
@@ -21,7 +21,11 @@
         <!--Begin body-->
         <hr/>
         <div id="main">
-           
+            <h2>The Comp Sci Club</h2>
+            <p>Hey! As said <a href="index.html">here</a> this club is about working together towards a goal and learning along the way. This year, that goal is a game. Soon we'll have a progress tracker that you can look at to see how we're doing. If you're interested in joining, feel free to come by <strong>Room 404 at 2:15 on Tuesdays</strong> (This is when we meet).</p>
+            <p>Although we only meet once a week, everyone is free to continue working on the project whenever they feel. This also makes it easy to miss a meeting without any consequence (except being called out). Although techincally you don't have to show up, it's encouraged because it gives everyone time to discuss new ideas and work together to solve problems face-to-face.</p>
+            <h2>Are you Interested?</h2>
+            <p>If you're interested to join but are hesitant because you feel you lack experience, feel free to join anyway. If you do want to learn and contribute, you'll be helped by someone. If you're interested in making a game but don't want to do the <em>computer science</em> stuff, you can still help. Games need more than just code, they need proper concept design, art, music, and other things too. If you're into conceptual design, you can still come to contribute (at least this year).</p>
         </div>
 	</body>
     <footer>
