Adding a post load script

--- a/posts.html
+++ b/posts.html
@@ -1,10 +1,11 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="./mainstyle.css">
+        <script type="text/javascript" src="./postScript.js"></script>
         <title>OMHS CSC</title>
 	</head>
 	<!--The head will have an image, most likely a banner-->
-	<body>
+	<body onload="pageLoad()">
         <a href="index.html">
             <div id="headbanner" style="background-image:url('./Pictures/OMCSBanner.png')"></div>
         </a>
