--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <hr/>
         <div id="main">
             <h2>Oakland Mills High School Computer Science (Club) (OMCS / OMCSC)</h2><br/>
-            <p>The OMCSC is a club where people can work together towards a comman goal using computer science. This year
+            <p>The OMCSC is a club where people can work together towards a common goal using computer science. This year
             that goal is a game! This website provides information on the club, its members, and what's happening.</p>
         </div>
 	</body>
