--- a/posts.html
+++ b/posts.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="./mainstyle.css">
-        <script src="jquery-3.1.1.js"></script>
+        <script src="jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="./postScript.js"></script>
         <title>OMHS CSC</title>
 	</head>
