Added default script file

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="./mainstyle.css">
+        <script src="jquery-3.1.1.min.js"></script>
+        <script type="text/javascript" src="./defaultscripts.js"></script>
         <title>OMHS CSC</title>
 	</head>
 	<!--The head will have an image, most likely a banner-->
