--- a/posts.html
+++ b/posts.html
@@ -2,7 +2,7 @@
 	<head>
 		<link rel="stylesheet" href="./mainstyle.css">
         <script src="jquery-3.1.1.min.js"></script>
-        <script type="text/javascript" src="./postScript.js"></script>
+        <script type="text/javascript" src="./defaultscripts.js"></script>
         <title>OMHS CSC</title>
 	</head>
 	<!--The head will have an image, most likely a banner-->
