--- a/members.html
+++ b/members.html
@@ -5,7 +5,7 @@
         <script type="text/javascript" src="./defaultscripts.js"></script>
         <title>OMHS CSC</title>
 	</head>
-	<!--The head will have an image, most likely a banner-->
+	<!--The head will have an image, most likely a banner. (TEST)-->
 	<body>
         <a href="index.html">
             <div id="headbanner" style="background-image:url('./Pictures/OMCSBanner.png')"></div>
