Added Progress page

--- a/members.html
+++ b/members.html
@@ -17,6 +17,7 @@
             <a href="about.html"><li class="horiznav">About</li></a>
             <a href="posts.html"><li class="horiznav">Posts</li></a>
             <a href="members.html"><li class="horiznav" id="current">Members</li></a>
+            <a href="progress.html"><li class="horiznav">Progress</li></a>
             <a href="contact.html"><li class="horiznav">Contact</li></a>
         </ul>
         <!--End Header section-->
