Added link to commits

--- a/progress.html
+++ b/progress.html
@@ -64,8 +64,8 @@
             <!--<iframe src="http://www.github.com"></iframe> Find way to display commits-->
             
             <!-- JavaScript stuff here (Only load if there's something to show)-->
-            <h2 id="commits"></h2>
-            <div id="commits"></div>
+            <h2 id="commits">Commit History</h2>
+            <div id="commits"><p>You can go <a href="https://github.com/OMHSCompSci/StoryRPGGame/commits/master">here</a> to see our recent commits.</p></div>
             
             <h2 id="code-goal">Current Code Goals</h2>
             <p>
