Added info to contact

--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,9 @@
         <!--Begin body-->
         <hr/>
         <div id="main">
-            <h2>Contact</h2>
+            <h2>Need Anything?</h2>
             <hr/>
+            <p>If you have any questions you can either come to a meeting and ask in person (Room 404 on Tuesdays from 2:15 to 3:15), or if this isn't an option for you or you prefer online communication, you can email us or Zach specifically using the following emails below.</p>
             <ul>
                 <li>
                     omhscompsci@gmail.com
