--- a/progress.html
+++ b/progress.html
@@ -59,7 +59,7 @@
         <!--Begin body-->
         <hr/>
         <div id="main">
-            <h2>Project Progress</h2><br/>
+            <h2>Project Progress</h2>
             <p>This page helps you view the progress we've made, and what we're working on now!</p>
             <!--<iframe src="http://www.github.com"></iframe> Find way to display commits-->
             
