--- a/members.html
+++ b/members.html
@@ -44,6 +44,14 @@
                 </tr>
                 <tr>
                     <td>
+                        Sponser
+                    </td>
+                    <td>
+                        Michael Mosier
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         Member
                     </td>
                     <td>
