Removed Posts page
We don’t have a use for it right now.

--- a/members.html
+++ b/members.html
@@ -15,7 +15,7 @@
         <ul class="horiznav">
             <a href="index.html"><li class="horiznav">Home</li></a>
             <a href="about.html"><li class="horiznav">About</li></a>
-            <a href="posts.html"><li class="horiznav">Posts</li></a>
+            <!--<a href="posts.html"><li class="horiznav">Posts</li></a>-->
             <a href="members.html"><li class="horiznav" id="current">Members</li></a>
             <a href="progress.html"><li class="horiznav">Progress</li></a>
             <a href="contact.html"><li class="horiznav">Contact</li></a>
