bc he never shows up smh

--- a/members.html
+++ b/members.html
@@ -63,6 +63,14 @@
                         Member
                     </td>
                     <td>
+                        Cameron Nikiel
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Member
+                    </td>
+                    <td>
                         Kyle Sluss
                     </td>
                 </tr>
