--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
             <!--<a href="posts.html"><li class="horiznav">Posts</li></a>-->
             <a href="members.html"><li class="horiznav">Members</li></a>
             <a href="progress.html"><li class="horiznav">Progress</li></a>
+            <a href="downloads.html"><li class="horiznav">Downloads</li></a>
             <a href="contact.html"><li class="horiznav" id="current">Contact</li></a>
         </ul>
         <!--End Header section-->
