--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <!--<a href="posts.html"><li class="horiznav">Posts</li></a>-->
             <a href="members.html"><li class="horiznav">Members</li></a>
             <a href="progress.html"><li class="horiznav">Progress</li></a>
+            <a href="downloads.html"><li class="horiznav">Downloads</li></a>
             <a href="contact.html"><li class="horiznav">Contact</li></a>
         </ul>
         <!--End Header section-->
