--- a/progress.html
+++ b/progress.html
@@ -53,6 +53,7 @@
             <!--<a href="posts.html"><li class="horiznav">Posts</li></a>-->
             <a href="members.html"><li class="horiznav">Members</li></a>
             <a href="progress.html"><li class="horiznav" id="current">Progress</li></a>
+            <a href="downloads.html"><li class="horiznav">Downloads</li></a>
             <a href="contact.html"><li class="horiznav">Contact</li></a>
         </ul>
         <!--End Header section-->
