--- a/downloads.html
+++ b/downloads.html
@@ -26,7 +26,7 @@
         <hr/>
         <div id="main">
             <h3>Downloads</h3>
-            <p id="norm">Here you can download anything we have publically availabele.</p>
+            <p id="norm">Here you can download anything we have publically available.</p>
             <table>
                 <tr>
                     <td>
