--- a/downloads.html
+++ b/downloads.html
@@ -33,7 +33,7 @@
                         Deceit (Most Recent)
                     </td>
                     <td>
-                        <a href="Deceit%20v0.0.1.jar">Deceit v0.0.1.jar</a>
+                        <a href="./Downloads/Deceit%20v0.0.1.jar">Deceit v0.0.1.jar</a>
                     </td>
                 </tr>
                 <tr>
@@ -41,7 +41,7 @@
                         Deceit (Most Working)
                     </td>
                     <td>
-                        <a href="Deceit%20v0.0.1.jar">Deceit v0.0.1.jar</a>
+                        <a href="./Downloads/Deceit%20v0.0.1.jar">Deceit v0.0.1.jar</a>
                     </td>
                 </tr>
             </table>
