Possible list change? yay? nay?

--- a/members.html
+++ b/members.html
@@ -1,23 +1,14 @@
-<html>
-	<head>
+<html><head>
 		<link rel="stylesheet" href="./mainstyle.css">
-        <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
-        <script>
-            // Initialize Firebase
-            var config = {
-                apiKey: "AIzaSyDsXqa0pTr_iaT0-SUUW0g4oE8R8rQW1fQ",
-                authDomain: "clubsite-3451c.firebaseapp.com",
-                databaseURL: "https://clubsite-3451c.firebaseio.com",
-                storageBucket: "clubsite-3451c.appspot.com",
-                messagingSenderId: "51997785049"
-            };
-            firebase.initializeApp(config);
-        </script>
         <script src="jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="./defaultscripts.js"></script>
-        <script type="text/javascript" src="./memberscript.js"></script>
         <title>OMHS CSC</title>
-	</head>
+	<style>
+		td {
+			width: 25%;
+		}
+	</style><link id="noteanywherecss" media="screen" type="text/css" rel="stylesheet" href="data:text/css,.note-anywhere%20.closebutton%7Bbackground-image%3A%20url%28chrome-extension%3A//bohahkiiknkelflnjjlipnaeapefmjbh/asset/deleteButton.png%29%3B%7D%0A"></head>
+	
 	<!--The head will have an image, most likely a banner-->
 	<body>
         <a href="index.html">
@@ -36,15 +27,65 @@
         </ul>
         <!--End Header section-->
         <!--Begin body-->
-        <hr/>
+        <hr>
         <div id="main">
-            <h2>OMCSC Members</h2><br/>
+            <h2>OMCSC Members</h2>
             <table class="memberlist">
-            </table>
+                <tbody><tr>
+			<td></td>
+                    <td>
+			    <strong><u>Founders</u></strong>
+                    </td>
+			<td></td>
+                </tr>
+                <tr>
+  
+		    <td></td>
+			<td>Zachary Carr &amp; Jonah Freeman</td>
+  <td></td>
+</tr>
+                <tr>
+			<td></td>
+                    <td>
+			    <strong><u>Sponser</u></strong>
+                    </td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+                    <td>
+                        Michael Mosier
+                    </td>
+			<td></td>
+                </tr>
+                <tr>
+			<td></td>
+                    	<td>
+				<strong><u>Members</u></strong>
+		   	</td>
+			<td></td>
+                </tr><tr>
+			<td>Kaleo Ngo</td>
+			<td>Cameron Nikiel</td>
+			<td>Kyle Sluss</td>
+                </tr>
+                <tr>
+			<td>Morgan Vanderhei</td>
+			<td>Philip Tian</td>
+			<td>Jacob Kopp</td>
+                </tr>
+                <tr>
+                  	<td>Joni Kim</td>
+			<td>Oluwole Odeseye</td>
+			<td>Gabriel Pillay</td>
+                </tr>
+
+            </tbody></table>
             
         </div>
-	</body>
+	
     <footer>
         The Oakland Mills High School Computer Science Club was created in the 2016-2017 school year.
     </footer>
-</html>
+
+</body></html>
