Added firebase script

--- a/members.html
+++ b/members.html
@@ -15,6 +15,7 @@
         </script>
         <script src="jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="./defaultscripts.js"></script>
+        <script type="text/javascript" src="./databasescript.js"></script>
         <script type="text/javascript" src="./memberscript.js"></script>
         <title>OMHS CSC</title>
 	</head>
