--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="./mainstyle.css">
+        <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
+        <script>
+            // Initialize Firebase
+            var config = {
+                apiKey: "AIzaSyDsXqa0pTr_iaT0-SUUW0g4oE8R8rQW1fQ",
+                authDomain: "clubsite-3451c.firebaseapp.com",
+                databaseURL: "https://clubsite-3451c.firebaseio.com",
+                storageBucket: "clubsite-3451c.appspot.com",
+                messagingSenderId: "51997785049"
+            };
+            firebase.initializeApp(config);
+        </script>
         <script src="jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="./defaultscripts.js"></script>
+        <script type="text/javascript" src="./databasescript.js"></script>
         <style>
             /*This can be moved to main style if needed*/
             #faq-list {
