--- a/downloads.html
+++ b/downloads.html
@@ -61,6 +61,6 @@
         </div>
 	</body>
     <footer>
-        The Oakland Mills High School Computer Science Club was created in the 2016-2017 school year.
+        This site was created by and for the Oakland Mills Computer Science Club.
     </footer>
 </html>
