--- a/members.html
+++ b/members.html
@@ -123,7 +123,7 @@
         </div>
 	
     <footer>
-        The Oakland Mills High School Computer Science Club was created in the 2016-2017 school year.
+        This site was created by and for the Oakland Mills Computer Science Club.
     </footer>
 
 </body></html>
