Starting to work on posts again

--- a/posts.html
+++ b/posts.html
@@ -16,10 +16,11 @@
         <script src="jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="./defaultscripts.js"></script>
         <script type="text/javascript" src="./databasescript.js"></script>
+        <script type="text/javascript" src="./postScript.js"></script>
         <title>OMHS CSC</title>
 	</head>
 	<!--The head will have an image, most likely a banner-->
-	<body onload="pageLoad()">
+	<body>
         <a href="index.html">
             <div id="headbanner" style="background-image:url('./Pictures/OMCSBanner.png')"></div>
         </a>
