Changed entire design

--- a/about.html
+++ b/about.html
@@ -21,11 +21,12 @@
 	<!--The head will have an image, most likely a banner-->
 	<body>
         <a href="index.html">
-            <div id="headbanner" style="background-image:url('./Pictures/OMCSBanner.png')"></div>
+            <div id="headbanner" style="background-image:url('./Pictures/OMCSBannerNoBD.png')"></div>
         </a>
         <!--This is the head image, clicking it will take you to the main page?-->
         <!--List of options; current options include "Home" "About" "Members" "Contact"-->
         <ul class="horiznav">
+            <div id="navspace">
             <a href="index.html"><li class="horiznav">Home</li></a>
             <a href="about.html"><li class="horiznav" id="current">About</li></a>
             <!--<a href="posts.html"><li class="horiznav">Posts</li></a>-->
@@ -33,10 +34,10 @@
             <a href="progress.html"><li class="horiznav">Progress</li></a>
             <a href="downloads.html"><li class="horiznav">Downloads</li></a>
             <a href="contact.html"><li class="horiznav">Contact</li></a>
+            </div>
         </ul>
         <!--End Header section-->
         <!--Begin body-->
-        <hr/>
         <div id="main">
             <h2>The Comp Sci Club</h2>
             <p>Hey! As said <a href="index.html">here</a> this club is about working together towards a goal and learning along the way. This year, that goal is a game. Soon we'll have a progress tracker that you can look at to see how we're doing. If you're interested in joining, feel free to come by <strong>Room 404 at 2:15 on Tuesdays</strong> (This is when we meet).</p>
