--- a/progress.html
+++ b/progress.html
@@ -56,11 +56,12 @@
 	<!--The head will have an image, most likely a banner-->
 	<body>
         <a href="index.html">
-            <div id="headbanner" style="background-image:url('./Pictures/OMCSBanner.png')"></div>
+            <div id="headbanner" style="background-image:url('./Pictures/OMCSBannerNoBD.png')"></div>
         </a>
         <!--This is the head image, clicking it will take you to the main page?-->
         <!--List of options; current options include "Home" "About" "Members" "Contact"-->
         <ul class="horiznav">
+            <div id="navspace">
             <a href="index.html"><li class="horiznav">Home</li></a>
             <a href="about.html"><li class="horiznav">About</li></a>
             <!--<a href="posts.html"><li class="horiznav">Posts</li></a>-->
@@ -68,10 +69,10 @@
             <a href="progress.html"><li class="horiznav" id="current">Progress</li></a>
             <a href="downloads.html"><li class="horiznav">Downloads</li></a>
             <a href="contact.html"><li class="horiznav">Contact</li></a>
+            </div>
         </ul>
         <!--End Header section-->
         <!--Begin body-->
-        <hr/>
         <div id="main">
             <h2>Project Progress</h2>
             <p id="center">This page helps you view the progress we've made, and what we're working on now!</p>
