--- a/progress.html
+++ b/progress.html
@@ -93,7 +93,7 @@
                 </li>
                 <li id="progress-list-item">
                     <!--Title-->World Correction
-                    <div id="progress-item-desc">Attempt to change the strucutre of the World class to make it more suitable for dynamic use.</div>
+                    <div id="progress-item-desc">Attempt to change the structure of the World class to make it more suitable for dynamic use.</div>
                 </li>
                 <li id="progress-list-item">
                     <!--Title-->Fix Collisions (Physics)
