Fixed safari table malfunction

--- a/members.html
+++ b/members.html
@@ -24,11 +24,14 @@
 		  }
            tr {
                width:100%;
-               display:table;
+               display:table-row;
            }
            tbody {
                width:100%;
                display:table;
+           }
+           table {
+               width:100%;
            }
 	   </style>
         <!-- what is this -->
