Fixed table width

--- a/progress.html
+++ b/progress.html
@@ -62,6 +62,7 @@
             }
             .comtable {
                 border-collapse: collapse;
+                width:100%;
             }
             .commit-item {
                 border-style:solid;
