--- a/progress.html
+++ b/progress.html
@@ -54,6 +54,7 @@
             }
             .comlist {
                 overflow: scroll;
+                overflow-x: hidden;
                 width:100%;
                 height:200px;
                 border-style: groove;
