--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </ul>
         <a href="index.html">
-        <div id="headbanner" style="background-image:url('./Pictures/OMCSBannerNoBD.png');"></div>
+        	<img id="headbanner" src="./Pictures/OMCSBannerNoBD.png" style="height: 35%;">
         </a>
         <!--End Header section-->
         <!--Begin body-->
