--- a/posts.html
+++ b/posts.html
@@ -22,7 +22,7 @@
 	<!--The head will have an image, most likely a banner-->
 	<body>
         <a href="index.html">
-            <div id="headbanner" style="background-image:url('./Pictures/OMCSBannerNoBD.png')"></div>
+        	<img id="headbanner" src="./Pictures/OMCSBannerNoBD.png" style="height: 35%;">
         </a>
         <!--This is the head image, clicking it will take you to the main page?-->
         <!--List of options; current options include "Home" "About" "Members" "Contact"-->
