Really (for real) fixed extra banner error
The only missing thing was the <!DOCTYPE html> who would’ve guessed
that it was necessary.

--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<link rel="stylesheet" href="./mainstyle.css">
@@ -34,9 +35,9 @@
             <a href="contact.html"><li class="horiznav">Contact</li></a>
             </div>
         </ul>
-	<a href="index.html">
+	       <a href="index.html">
         	<img id="headbanner" src="./Pictures/OMCSBannerNoBD.png" style="height: 35%;">
-        </a>	
+        </a>
         <!--End Header section-->
         <!--Begin body-->
         <div id="main">
