Added little GitHub symbol on navbar
Also fixed nav bar item height

--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
             <a href="downloads.html"><li class="horiznav">Downloads</li></a>
             <a href="contact.html"><li class="horiznav">Contact</li></a>
             </div>
+            <a href="https://github.com/OMHSCompSci"><li class="horiznav"><img src="./Pictures/github-logo.png"/></li></a>
         </ul>
 	       <a href="index.html">
         	<img id="headbanner" src="./Pictures/OMCSBannerNoBD.png" style="height: 35%;">
