--- a/progress.html
+++ b/progress.html
@@ -115,6 +115,7 @@
             <a href="progress.html"><li class="horiznav" id="current">Progress</li></a>
             <a href="downloads.html"><li class="horiznav">Downloads</li></a>
             <a href="contact.html"><li class="horiznav">Contact</li></a>
+            <a href="https://github.com/OMHSCompSci"><li class="horiznav"><img src="./Pictures/github-logo.png"/></li></a>
             </div>
         </ul>
         <!--End Header section-->
