Updated Progress page

--- a/progress.html
+++ b/progress.html
@@ -149,14 +149,14 @@
                 <li id="progress-list-item">
                     <!--Title-->World Correction
                     <div id="progress-item-desc">Attempt to change the structure of the World class to make it more suitable for dynamic use.</div>
-                </li>
-                <li id="progress-list-item">
-                    <!--Title-->Fix Collisions (Physics)
-                    <div id="progress-item-desc">Correct the changes to the velocity and position of the player to become accurate. (Reduce glitchy movement).</div>
-                </li>
+		</li>
                 <li id="progress-list-item">
                     <!--Title-->Friction (?)
                     <div id="progress-item-desc">Create something which will move Entities with the platform it's on. (Most likely friction).</div>
+                </li>
+		<li id="progress-list-item">
+                    <!--Title-->Triangular Hitboxes
+                    <div id="progress-item-desc">Create a Triangle class (similar to Rectangle) and apply it to a new hitbox class. (Possible make Hitbox an interface)</div>
                 </li>
             </ul>
             
@@ -203,6 +203,10 @@
                  <li id="progress-list-item">
                     <!--Title-->Moving Platforms (With player)
                     <div id="progress-item-desc">Platforms move, but the player’s velocity is not affected by the platform (we want it to be affected by the moving platform).</div>
+                </li>
+		<li id="progress-list-item">
+                <!--Title-->Fix Collisions (Physics)
+                    <div id="progress-item-desc">Correct the changes to the velocity and position of the player to become accurate. (Reduce glitchy movement).</div>
                 </li>
             </ul>
         </div>
