Added link to view doc
Have to be logged into hcpss account

--- a/progress.html
+++ b/progress.html
@@ -126,7 +126,7 @@
             
             <!-- JavaScript stuff here (Only load if there's something to show)-->
             <h2 id="commits">Commit History</h2>
-            <div id="commits"><p id="center">You can go <a href="https://github.com/OMHSCompSci/StoryRPGGame/commits/master">here</a> to see our recent commits.</p>
+            <div id="commits"><p id="center">You can go <a href="https://github.com/OMHSCompSci/StoryRPGGame/commits/master">here</a> to see our recent commits. If you're part of HCPSS then you can go <a href="https://docs.google.com/a/hcpss.org/document/d/1ixpae-ENTT5Tw2gG94n-NqbBqxlrcCfQ57bbFjiUdCs/edit?usp=sharing">here</a> to <em>view</em> more specifically what's going on.</p>
             
                 <span id="cooltitle"><center>Deceit</center></span>
                 <hr/>
