Changing Website information
Just changed a few things

--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
             <a href="progress.html"><li class="horiznav">Progress</li></a>
             <a href="downloads.html"><li class="horiznav">Downloads</li></a>
             <a href="contact.html"><li class="horiznav" id="current">Contact</li></a>
+            <a href="https://hackclub.com/"><li class="horiznav">HackClub</li></a>
             <a href="https://github.com/OMHSCompSci"><li class="horiznav"><img src="./Pictures/github-logo.png"/></li></a>
             </div>
         </ul>
@@ -43,7 +44,7 @@
         <div id="main">
             <h2>Need Anything?</h2>
             <hr/>
-            <p>If you have any questions you can either come to a meeting and ask in person (Room 404 on Tuesdays from 2:15 to 3:15), or if this isn't an option for you or you prefer online communication, you can email us or Zach specifically using the following emails below.</p>
+            <p>If you have any questions you can either come to a meeting and ask in person (Room 404 on Tuesdays from 2:15 to unkown), or if this isn't an option for you or you prefer online communication, you can email us or Zach specifically using the following emails below. If you have a question about <a href="https://hackclub.com/">HackClub</a>, we may be able to answer your question. If it is more about the organization specifically, we suggest you check out their website.</p>
             <ul>
                 <li>
                     omhscompsci@gmail.com
