--- a/downloads.html
+++ b/downloads.html
@@ -35,6 +35,7 @@
             <a href="progress.html"><li class="horiznav">Progress</li></a>
             <a href="downloads.html"><li class="horiznav" id="current">Downloads</li></a>
             <a href="contact.html"><li class="horiznav">Contact</li></a>
+            <a href="https://hackclub.com/"><li class="horiznav">HackClub</li></a>
             <a href="https://github.com/OMHSCompSci"><li class="horiznav"><img src="./Pictures/github-logo.png"/></li></a>
             </div>
         </ul>
@@ -46,7 +47,7 @@
             <table>
                 <tr>
                     <td>
-                        Deceit (Most Recent)
+                        <span style="text-decoration:line-through">Deceit (Most Recent)</span> (Abandoned)
                     </td>
                     <td>
                         <a href="./Downloads/Deceit%20v0.0.1.jar">Deceit v0.0.1.jar</a>
@@ -54,7 +55,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Deceit (Most Working)
+                        <span style="text-decoration:line-through">Deceit (Most Working)</span> (Abandoned)
                     </td>
                     <td>
                         <a href="./Downloads/Deceit%20v0.0.1.jar">Deceit v0.0.1.jar</a>
