--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <a href="progress.html"><li class="horiznav">Progress</li></a>
             <a href="downloads.html"><li class="horiznav">Downloads</li></a>
             <a href="contact.html"><li class="horiznav">Contact</li></a>
+            <a href="https://hackclub.com/"><li class="horiznav">HackClub</li></a>
             <a href="https://github.com/OMHSCompSci"><li class="horiznav"><img src="./Pictures/github-logo.png"/></li></a>
             </div>
         </ul>
@@ -62,13 +63,12 @@
             
             <h2>Oakland Mills High School Computer Science (Club) (OMCS / OMCSC)</h2><br/>
             
-            <p>The OMCSC is a club where people can work together towards a common goal using computer science. This year
-            that goal is a game! This website provides information on the club, its members, and what's happening. Here's a link to our <a href="http://github.com/OMHSCompSci">GitHub</a> account.</p>
+            <p>The OMCS Club is where you can join to learn how to design and create software, websites, and other things. This website is built and managed by members of the club, and is used as an information source. We're happily signed up with <a href="https://hackclub.com/">HackClub</a>, an organization which helps provide schools with resources to assist their computer science clubs. Follow that link to learn more about who they are and how they help.</p>
             <h3>Quick FAQs</h3>
             <ul id="faq-list">
                 <li id="faq-list-question">
                     When do you meet?
-                    <div id="faq-list-answer">We meet on Tuesdays from 2:15 to 3:15. If you can't make it at that time, don't let that discourage you from joining. You should try <a href="contact.html">contacting</a> us and ask about what you can do. Be sure to describe your situation.</div>
+                    <div id="faq-list-answer">We meet on Tuesdays from 2:15 to <strong>a now unspecified time, due to our recent pairing with <a href="https://hackclub.com/">HackClub</a>.</strong>
                 </li>
                 <li id="faq-list-question">
                     Where do you meet?
@@ -80,11 +80,11 @@
                 </li>
                 <li id="faq-list-question">
                     I'm interested but don't know anything about Computer Science, what do I do?
-                    <div id="faq-list-answer">You should check out the <a href="about.html">About</a> page. Having no prior knowledge won't hold you back, everyone is here to help.</div>
+                    <div id="faq-list-answer">You should check out the <a href="about.html">About</a> page. Having no prior knowledge won't hold you back, anyone can join. <a href="https://hackclub.com/">HackClub</a> provides resources to help assist in learning.</div>
                 </li>
                 <li id="faq-list-question">
                     What other things do you do?
-                    <div id="faq-list-answer">A few things. Besides our project, people are able to help each other learn new ideas and skills. Also, occasionally we have pizza or some other food during a meeting. Another thing is that if you have a request for a small project or other help, some people in this club might help you with it. All you'd have to do is either <a href="contact.html">email us</a> or show up at a meeting and ask.</div>
+                    <div id="faq-list-answer">In addition to the <a href="https://hackclub.com/">HackClub</a> activities provided, groups of people can choose to start their own group projects and work on them together. Using <a href="https://www.github.com/OMHSCompSci">GitHub</a>, people can easily create team projects.</div>
                 </li>
             </ul>
         </div>
