--- a/progress.html
+++ b/progress.html
@@ -115,6 +115,7 @@
             <a href="progress.html"><li class="horiznav" id="current">Progress</li></a>
             <a href="downloads.html"><li class="horiznav">Downloads</li></a>
             <a href="contact.html"><li class="horiznav">Contact</li></a>
+            <a href="https://hackclub.com/"><li class="horiznav">HackClub</li></a>
             <a href="https://github.com/OMHSCompSci"><li class="horiznav"><img src="./Pictures/github-logo.png"/></li></a>
             </div>
         </ul>
@@ -122,8 +123,8 @@
         <!--Begin body-->
         <div id="main">
             <h2>Project Progress</h2>
+            <h1>This page is no longer relevant, as we have changed our club to match <a href="https://hackclub.com/">HackClub</a>'s style. However, you are still free to look at our previous goals and progress.</h1>
             <p id="center">This page helps you view the progress we've made, and what we're working on now!</p>
-            
             <!-- JavaScript stuff here (Only load if there's something to show)-->
             <h2 id="commits">Commit History</h2>
             <div id="commits"><p id="center">You can go <a href="https://github.com/OMHSCompSci/StoryRPGGame/commits/master">here</a> to see our recent commits. If you're part of HCPSS then you can go <a href="https://docs.google.com/a/hcpss.org/document/d/1ixpae-ENTT5Tw2gG94n-NqbBqxlrcCfQ57bbFjiUdCs/edit?usp=sharing">here</a> to <em>view</em> more specifically what's going on.</p>
