--- a/about.html
+++ b/about.html
@@ -33,8 +33,9 @@
             <a href="progress.html"><li class="horiznav">Progress</li></a>
             <a href="downloads.html"><li class="horiznav">Downloads</li></a>
             <a href="contact.html"><li class="horiznav">Contact</li></a>
-            </div>
+            <a href="https://hackclub.com/"><li class="horiznav">HackClub</li></a>
             <a href="https://github.com/OMHSCompSci"><li class="horiznav"><img src="./Pictures/github-logo.png"/></li></a>
+            </div>
         </ul>
 	       <a href="index.html">
         	<img id="headbanner" src="./Pictures/OMCSBannerNoBD.png" style="height: 35%;">
@@ -43,10 +44,10 @@
         <!--Begin body-->
         <div id="main">
             <h2>The Comp Sci Club</h2>
-            <p>Hey! As said <a href="index.html">here</a> this club is about working together towards a goal and learning along the way. This year, that goal is a game. Soon we'll have a progress tracker that you can look at to see how we're doing. If you're interested in joining, feel free to come by <strong>Room 404 at 2:15 on Tuesdays</strong> (This is when we meet).</p>
-            <p>Although we only meet once a week, everyone is free to continue working on the project whenever they feel. This also makes it easy to miss a meeting without any consequence (except being called out). Although techincally you don't have to show up, it's encouraged because it gives everyone time to discuss new ideas and work together to solve problems face-to-face.</p>
+            <p>Hey! As said <a href="index.html">here</a> this club is about learning and creation. If you're interested in joining, feel free to come by <strong>Room 404 at 2:15 on Tuesdays</strong> (This is when we meet).</p>
+            <p>Although we only meet once a week, everyone is free to continue working on projects in their free time. This also makes it easy to miss a meeting without any consequence (except being called out). It is highly encouraged to show up to most meetings.</p>
             <h2>Are you Interested?</h2>
-            <p>If you're interested to join but are hesitant because you feel you lack experience, feel free to join anyway. If you do want to learn and contribute, you'll be helped by someone. If you're interested in making a game but don't want to do the <em>computer science</em> stuff, you can still help. Games need more than just code, they need proper concept design, art, music, and other things too. If you're into conceptual design, you can still come to contribute (at least this year).</p>
+            <p>If you're interested to join but are hesitant because you feel you lack experience, feel free to join anyway. If you do want to learn, <a href="https://hackclub.com/">HackClub</a> provides resources to help you with whatever you need. In addition, you have each other to help you out with something you can't figure out yourself.</p>
         </div>
 	</body>
     <footer>
