another faq question

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
                     What other things do you do?
                     <div id="faq-list-answer">In addition to the <a href="https://hackclub.com/">HackClub</a> activities provided, groups of people can choose to start their own group projects and work on them together. Using <a href="https://www.github.com/OMHSCompSci">GitHub</a>, people can easily create team projects.</div>
                 </li>
+                <li id="faq-list-question">
+                    Are you willing to work with other clubs?
+                    <div id="faq-list-answer">Yes, if clubs wish to work on something with us we're willing to discuss.</div>
+                </li>
             </ul>
         </div>
 	</body>
